--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@asushares/cds",
-    "version": "2.4.4",
-    "description": "ASU SHARES FHIR Consent CDS Hooks services.",
+    "name": "immunization-server",
+    "version": "0.0.0",
+    "description": "Immunization dashboard backend API server.",
     "scripts": {
         "start": "npm run build && npx node build/server.js",
         "build": "npx tsc && npm run copy-files",
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/asushares/cds.git"
+        "url": "git+https://github.com/lee-informatics/immunization-server.git"
     },
     "keywords": [
         "asu shares",
@@ -21,12 +21,10 @@
     "author": "Preston Lee",
     "license": "Apache-2.0",
     "bugs": {
-        "url": "https://github.com/asushares/cds/issues"
+        "url": "https://github.com/lee-informatics/immunization-server/issues"
     },
-    "homepage": "https://github.com/asushares/cds#readme",
+    "homepage": "https://github.com/lee-informatics/immunization-server#readme",
     "dependencies": {
-        "@asushares/core": "^2.12.5",
-        "ajv": "^8.17.1",
         "axios": "^1.11.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.0",
