--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "express": "^5.1.0",
         "express-basic-auth": "^1.2.1",
         "jsonpath-plus": "^10.3.0",
+        "mongo": "^0.1.0",
         "nodemon": "^3.1.10",
         "rxjs": "^7.8.2",
         "statman": "^1.9.1",
